# RacingData

./: .dccache  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  RacePredictor.sln  RacePredictor.sln.DotSettings  evaluation_comparison_20260602.csv  evaluation_comparison_demo_20260602.csv  evaluation_gap_vs_topprob_30fold.csv  evaluation_results_20260531.csv  evaluation_results_20260618.csv  evaluations.md  pyproject.toml  run.ps1
.azuredevops/: ci.yml  quality-checks.yml  scheduled-run.yml
.claude/: settings.local.json
.claude/agents/: issue-implementer.md
Data/: Analysis.ipynb  FeatureAnalysis.ipynb  HorseStatsBuilder.ipynb  Horse_Stats.csv  JockeyStatsBuilder.ipynb  Jockey_Stats.csv  LinearRegression.ipynb  LinearRegressionPredictor.ipynb  PredictionScores_202207.csv  PredictionScores_202309.csv  PredictionScores_202310.csv  PredictionScores_202402.csv  PredictionScores_202405.csv  PredictionScores_202406.csv  PredictionScores_202407.csv  PredictionScores_202602.csv  PredictionScores_202603.csv  PredictionScores_202604.csv  PredictionScores_202605.csv  PredictionScores_202606.csv  PredictionScores_202607.csv  Predictions.json  RaceCards.csv  RaceCards.json  Results202112.csv  ResultsToPredict.csv  Results_202107.csv  Results_202111.csv  Results_202112.csv  Results_202201.csv  Results_202202.csv  Results_202203.csv  Results_202207.csv  Results_202208.csv  Results_202210.csv  Results_202212.csv  Results_202301.csv  Results_202302.csv  Results_202303.csv  Results_202307.csv  (+34 more)
Data/algorithms/: __init__.py  base.py  market_favourite.py  ridge_regression.py  test_market_favourite.py  test_ridge_regression.py  test_xgboost_algorithm.py  (+1 more)
RaceDataDownloader/: DownloadResultsCommandHandler.cs  DownloadResultsOptions.cs  ExitCodes.cs  FileCommandHandlerBase.cs  Program.cs  RaceDataDownloader.csproj  RealClock.cs
RaceDataDownloader.Tests/: DownloadResultsCommandHandlerShould.DownloadResultsAndSaveToExpectedLocation.verified.txt  DownloadResultsCommandHandlerShould.DownloadResultsAndSaveToExpectedLocation_CSV.verified.txt  DownloadResultsCommandHandlerShould.cs  GlobalUsings.cs  MockFileSystemBuilder.cs  MockRacingDataDownloader.cs  OutputLogger.cs  RaceDataDownloader.Tests.csproj  RecordingLogger.cs
RacePredictor.Core/: RaceAttributes.cs  RaceCard.cs  RaceClassification.cs  RaceDistance.cs  RaceEntity.cs  RaceOdds.cs  RacePredictor.Core.csproj  RaceResult.cs  RaceResultRunner.cs  RaceResultRunnerAttributes.cs  RaceResultRunnerResults.cs  RaceResultRunnerStats.cs  RaceRunner.cs  RaceRunnerAttributes.cs  RaceRunnerBreeding.cs  RaceRunnerExtras.cs  RaceRunnerStats.cs  RaceSexRestriction.cs  RaceSurface.cs  RaceType.cs  RaceWeight.cs  ResultStatus.cs  StringExtensions.cs  VoidRaceException.cs
RacePredictor.Core.Tests/: RaceDistanceShould.cs  RaceOddsShould.cs  RacePredictor.Core.Tests.csproj  ResourceLoader.cs  StringExtensionsShould.cs
docs/: data-pitfalls.md  evaluation-pipeline.md  odds-capture.md  racecard-extra-data-audit.md  staking.md
issues/: 001-add-leakage-warning-to-evaluations.md  001-adopt-ruff-config-and-reformat.md  001-algorithm-package-ridge-registry.md  001-create-pyproject-and-package-skeleton.md  001-features-transforms.md  001-next-data-reader-deep-module.md  001-proxy-tsr-model.md  001-unify-prediction-data-path-racedata.md  002-evaluator-kelly-summary-table.md  002-horse-stats-carries-previous-race-ratings.md  002-json-sole-source-with-dom-oracle.md  002-live-availability-and-coverage-pulls.md  002-materialize-market-prob-serving-path.md  002-migrate-utils-module.md  002-pre-commit-hook-ruff.md  002-proxy-tsr-xgboost-algorithm.md  002-racedata-value-object-and-builder.md  002-scoring-utilities.md  002-stake-column-in-todays-predictions.md  002-surface-fields-in-csv-records.md  002-timing-summary-table.md  003-add-optional-forecast-columns-to-results-schema.md  003-azure-devops-ci-quality-gate.md  003-binary-win-classifier-middle-class.md  003-capture-owner.md  003-csv-prediction-export.md  003-deepen-fieldpredictor-engine.md  003-materialize-market-prob-training-path.md  003-ratings-xgboost-previous-race-ratings.md  003-review-approve-rules-and-features.md  003-verdicts-ranking-shortlist-and-finalisation.md  004-capture-breeding.md  004-docs.md  004-expose-market-prob-optional-predictors.md  004-features-trainer-stats.md  004-kelly-in-early-late-split.md  004-merge-forecast-into-results-in-validate.md  004-migrate-classifiers-and-smoke-eval.md  004-migrate-win-classifier-family.md  004-predict-py.md  (+39 more)
race_analytics/: data_path.py
tests/: test_data_path.py  test_package.py
(+341 files in other folders)
