[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "race_analytics"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "python-dateutil",
    "matplotlib",
    "ipykernel",
    "nbconvert",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["race_analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
