[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "race_analytics"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "python-dateutil",
    "matplotlib",
    "ipykernel",
    "nbconvert",
]

# Pinned dev toolchain — the single quality gate for the Python package.
# ruff is used in stage 1 (issue 001/002); pyright + pre-commit are pinned here
# but first *used* in stage 2 (issues 005/006), so `.[dev]` is the one install
# for the whole rollout.
[project.optional-dependencies]
dev = [
    "ruff==0.15.17",
    "pyright==1.1.410",
    "pre-commit==4.6.0",
    "pytest==9.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["race_analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
# Notebooks are out of scope (PRD): the tracked *.ipynb and their gitignored
# nbconvert *.py outputs are not linted/typed/formatted.
extend-exclude = ["race_analytics/notebooks"]

[tool.ruff.lint]
# Curated broad rule set — deliberately NOT `select = ["ALL"]` (avoids
# conflicting/opinionated families and an ongoing ignore-list chore).
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "NPY", "PD"]
# PD011 (.values access) is noisy; the formatter owns line length, so E501 is off.
ignore = ["PD011", "E501"]

[tool.pyright]
# Single type-checker config (no pyrightconfig.json — it would silently override
# this block). Pylance reads the same block, so editor squiggles == CLI errors.
include = ["race_analytics", "tests"]
# Notebooks are out of scope (PRD), mirroring the ruff extend-exclude.
exclude = ["**/__pycache__", "race_analytics/notebooks"]
# Resolve the installed pandas/numpy/sklearn/xgboost from the project venv so the
# type checker reports real diagnostics, not a flood of missing-import errors.
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "strict"
# Mute the pandas/numpy "no-stubs -> Unknown" family: ~1,250 of strict's 1,505
# raw diagnostics are library-stub noise. Muting these six leaves the ~200 genuine
# type issues while preserving strict's param/return-annotation discipline and
# every real-bug rule.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"
reportMissingTypeArgument = "none"
